# robot-haskell

./: .gitignore  robot.cabal
app/: Main.hs
src/: Robot.hs
test/: Spec.hs
